render_template with variable

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Darbukas</title>
+    <title>Vardai</title>
 </head>
 <body>
-<h1>Labas, pasauli</h1>
+<h1>Vardai</h1>
+{%for x in sarasas%}
+<p>{{x}}</p>
+{%endfor%}
 </body>
 </html>
