--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Loginimasis</title>
-</head>
-<body>
+{%extends 'base.html'%}
+{%block content%}
 <form action="#" method="post">
     <p>vardas:</p>
     <p><input type="text" name="vardas"/></p>
     <p><input type="submit" value="submit"/></p>
 </form>
-</body>
-</html>
+{%endblock%}
